--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,7 @@
     {% if page.date %}
     <meta property="article:published_time" content="{{ page.date | date: "%Y-%m-%d" }}">
     {% endif %}
+    <script>window.initFuncs = [];</script>
   </head>
   <body{% if page.wide_layout %} class="wide"{% endif %}>
     <!--script>/*
@@ -115,5 +116,6 @@
     
     {% include highlight.html %}
     {% include analytics.html %}
+    <script>for (var k in window.initFuncs) { window.initFuncs[k](); } delete window.initFuncs;</script>
   </body>
 </html>
